# trigno_capture

./: .gitmodules  .package.xml.kate-swp  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: trigno_capture.launch
scripts/: pytrigno_node.py
